# Discord-Search-Bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
queries/: SearchCharacter.graphql  SearchMedia.graphql  SearchStaff.graphql  SearchStudio.graphql  SearchUser.graphql
src/: main.rs
src/commands/: character.rs  media.rs  mod.rs  staff.rs  studio.rs  user.rs
