[package]
name = "discord-search-bot"
version = "2.0.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
graphql_client = { version = "0.13.0", features = ["reqwest"] }
html2md = "0.2.14"
poise = "0.6.1"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
